# pingbot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: config.rs  main.rs
src/providers/: discourse.rs  github.rs  mod.rs  slack.rs
