[package]
name = "pingbot"
version = "0.1.0"
authors = ["you06 <you1474600@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }
toml = "0.5"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
